Fix item text overflow problem

--- a/src/Lists/List/Common/Item/Item.module.css
+++ b/src/Lists/List/Common/Item/Item.module.css
@@ -6,6 +6,7 @@
 .content {
   flex: 1;
   margin-right: var(--spacing-sm);
+  overflow: hidden;
 }
 
 .button {
