--- a/src/Lists/List/List.module.css
+++ b/src/Lists/List/List.module.css
@@ -5,7 +5,7 @@
 }
 
 .list > * {
-  min-width: 280px;
+  width: 280px;
   margin: 0 var(--spacing-sm);
 }
 
